# privilege

./: .gitignore  Cargo.toml  README.md
examples/: check_privilege.rs  root_shell.rs
src/: lib.rs
src/runas/: macos.rs  mod.rs  shared.rs  unix.rs  windows.rs
src/user/: mod.rs  shared.rs  unix.rs  windows.rs
