[package]
name = "privilege"
version = "0.2.0"
edition = "2021"
authors = ["shellrow <shellrow@protonmail.com>"]
description = "Cross-platform library for administrative permission handling."
repository = "https://github.com/shellrow/privilege"
readme = "README.md"
keywords = ["privilege","runas", "sudo", "elevated"]
license = "MIT"

[dependencies]
libc = "0.2"
which = "4.3.0"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
security-framework-sys = "2.9.0"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.48.0"
features = [
    "Win32_Foundation", 
    "Win32_Security", 
    "Win32_System_Threading",
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Registry"
]
